<resources>
    <string name="app_name">Calorie Counter</string>

    <!--input field-->
    <string name="age">Usia</string>
    <string name="height">Tinggi Badan(cm)</string>
    <string name="weight">Berat Badan(kg)</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="activity">Aktivitas</string>

    <!--value-->
    <string name="man">Pria</string>
    <string name="woman">Wanita</string>
    <string name="score">BMI: 20</string>

    <string name="underweight">Kurus</string>
    <string name="ideal">Ideal</string>
    <string name="overweight">Gemuk</string>
    <string name="obese">Obesitas</string>

    <string name="age_invalid">Usia tidak boleh kosong</string>
    <string name="weight_invalid">Berat tidak boleh kosong</string>
    <string name="height_invalid">Tinggi tidak boleh kosong</string>
    <string name="gender_invalid">Gender tidak boleh kosong</string>
    <string name="activity_invalid">Aktivitas tidak boleh kosong</string>

    <string name="bmi_x">BMI: %1$.2f</string>
    <string name="category_x">Kategori: %1$s</string>
    <string name="bmr_x">%1$.2f kalori</string>
    <string name="category_result">BMI Kamu termasuk Kategori %1$s !</string>

    <string name="category_info">Badan kamu termasuk dalam</string>
    <string name="suggestion">Kalo kamu butuh rekomendasi makanan sehat yang enak, cobain makanan dibawah yaa!</string>

    <string name="mealName">Nama Makanan</string>
    <string name="mealMacro">500 kalori</string>

    <string name="reset">Reset</string>
    <string name="never">Tidak Pernah Olahraga</string>
    <string name="rarely">Jarang Olahraga</string>
    <string name="often">Sering Olahraga</string>
    <string name="bmr">2900</string>

    <!--text-->
    <string name="calculate">Hitung</string>
    <string name="intro">Skor BMI Kamu</string>
    <string name="introCalorie">Kebutuhan Kalori Kamu</string>
    <string name="recommendations">Rekomendasi Menu Makanan</string>

    <string name="empty_data">Oops there is nothing here</string>
    <string name="category_history">I</string>

    <string name="history">History</string>

    <string name="meal_name">Meal Name</string>
    <string name="meal_calorie">Total Calorie</string>
    <string name="add_meal">Add Meal</string>

    <string name="date">12 June 2023</string>
    <string name="call_us">Contact us</string>
    <string name="info_app">Aplikasi Calorie Counter V2 memiliki fungsi yang sangat berguna dalam mengelola pola makan dan memantau kebutuhan kalori pengguna. Dengan menggunakan aplikasi ini, pengguna dapat menghitung Body Mass Index (BMI) dan Metabolic Rate Basal (BMR) mereka untuk menentukan jumlah kalori yang diperlukan.

Selain itu, Calorie Counter V2 juga menyediakan rekomendasi makanan sehat yang dapat dicoba oleh pengguna, lengkap dengan informasi kalori yang terkandung di dalamnya. Fitur baru pada versi ini memungkinkan pengguna untuk menambahkan variasi makanan ke dalam daftar, dengan memasukkan nama makanan, jumlah kalori, dan bahkan dapat melampirkan gambar makanannya.

Dengan demikian, aplikasi ini memberikan kemudahan dan fleksibilitas bagi pengguna dalam mengelola asupan kalori mereka sehari-hari.</string>


    <string name="info">About Application</string>

    <string name="delete_confirmation">Hapus semua histori?</string>
    <string name="delete">Hapus</string>
    <string name="cancel">Batal</string>

    <string name="goto_result">Saran Makanan</string>

    <string name="koneksi_error">Koneksi Internet Kamu Terganggu nih ≧ ﹏ ≦</string>

    <string name="channel_name">Updater</string>
    <string name="channel_desc">Update data makanan otomatis</string>

    <string name="notif_title">Wahh ada yang mulai hidup sehat nihh😝</string>
    <string name="notif_text">Ayo hidup sehat, lacak terus kesehatanmu dengan Calorie Calculatoro ╰(*°▽°*)╯</string>

    <string name="linkedin">linkedIn</string>
    <string name="instagram">Instagram</string>
    <string name="git_hub">Git Hub</string>

</resources>