<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_marginHorizontal="16dp"
    android:background="@drawable/rounded_background"
    android:backgroundTint="?attr/colorTertiaryContainer"
    android:layout_marginVertical="8dp"
    android:padding="8dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/categoryIcon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/rounded_background"
        android:gravity="center"
        android:text="@string/category_history"
        android:textColor="?attr/colorOnTertiary"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/categoryTextView"
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:text="@string/ideal" />

        <TextView
            android:id="@+id/bmiTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bmi_x" />

        <TextView
            android:id="@+id/calorieTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bmr_x" />

        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date" />

    </LinearLayout>

</LinearLayout>