<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.info.InfoFragment">

    <TextView
        android:id="@+id/infoTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:justificationMode="inter_word"
        android:text="@string/info_app"
        android:textAlignment="textStart"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/callUs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/call_us"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/contact_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/linkedin_icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/linkedin"
            android:src="@drawable/ic_linkedin" />

        <ImageView
            android:id="@+id/instagram_icon"
            android:layout_width="46dp"
            android:contentDescription="@string/instagram"
            android:layout_height="48dp"
            android:layout_marginHorizontal="8dp"
            android:src="@drawable/ic_instagram" />

        <ImageView
            android:id="@+id/github_icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/git_hub"
            android:src="@drawable/ic_github" />

    </LinearLayout>

</LinearLayout>